# notebooks

./: .gitignore  README.md  product-recommender-system-from-search-queries.ipynb  pyproject.toml
notebooks/: aoc-2023.py  aoc-2025.py  hello-world.py
