[project]
name = "notebooks"
version = "0.1.0"
description = "Notebooks for various projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx[default]>=3.6",
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupytext>=1.18.1",
    "ruff>=0.14.7",
]
